<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/mainLayout"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/topo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/Transfer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Agency"
            android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Account"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Value"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/editText3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10" />
		<LinearLayout
    	    android:layout_marginTop="15dp"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content" >

    		<Button
    		    android:id="@+id/button1"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_gravity="left"
    		    android:layout_weight="1"
    		    android:onClick="butConfirm_Click"
    		    android:text="@string/Confirm" />
			
<!-- 			<Button
    		    android:id="@+id/button2"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_gravity="left"
    		    android:layout_weight="1"
    		    android:onClick="butConfirmToken_Click"
    		    android:text="@string/ConfirmWithToken" /> -->
    		

    		<Button
    		    android:id="@+id/button3"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_gravity="right"
    		    android:layout_weight="1"
    		    android:onClick="butCancel_Click"
    		    android:text="@string/Cancel" />

    	</LinearLayout>
    </LinearLayout>
</LinearLayout>