<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textColor="#626262"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/topo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/hor1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" 
            android:weightSum="2"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/icon1"
                android:text="@string/Token"
                android:textSize="15sp"
                android:textColor="#015da3" 
                android:padding="20dp"
                android:onClick="butToken_Click"/>

            <Button
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/icon2"
                android:src="@drawable/icon2"
                android:text="@string/OOB"
                android:textSize="15sp"
                android:textColor="#015da3"
                android:padding="20dp"
                android:onClick="butOOB_Click"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hor2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/imageButton3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/icon3"
                android:src="@drawable/icon3"
                android:text="@string/WithdrawATM"
                android:textSize="15sp"
                android:textColor="#015da3"
                android:padding="20dp"
                android:onClick="butWithdraw_Click"/>

            <Button
                android:id="@+id/imageButton4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/icon4"
                android:src="@drawable/icon4"
                android:text="@string/UnlockCard"
                android:textSize="15sp"
                android:textColor="#015da3"
                android:padding="20dp"
                android:onClick="butUnlockCard_Click"/>
            
        </LinearLayout>
    </LinearLayout>
</LinearLayout>