<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/topo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/Protector"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="btnStopScanOnClick"
        android:text="@string/Cancel"
        android:textSize="8pt"
        android:textColor="@android:color/black"
    	android:background="@drawable/btn_gray" />

    <ProgressBar
        android:id="@+id/protectorScanProgressBar"
        style="@style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/txtProtectorScanAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/protectorScanProgressBar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/UpdateProtectorProgess"
        android:textColor="@android:color/black"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/protectorScanProgressBar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/protector_scan_1"
        android:textColor="@android:color/black"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/txtProtectorScanAppsScanned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="0"
        android:textColor="@android:color/black"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/protector_scan_2"
        android:textColor="@android:color/black"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/txtProtectorScanMalwaresFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="0"
        android:textColor="@android:color/black"
        android:textSize="8pt" />

</RelativeLayout>