<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:weightSum="3">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/brazil_flag_icon" 
            android:layout_weight="1" />
	
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/spain_flag_icon" 
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/united_kingdom_flag_icon" 
            android:layout_weight="1"/>
        
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TaidNumber"
                android:textColor="#919191"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TaspServiceURL"
                android:textColor="#919191"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtTasp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ServerKeyUrl"
                android:textColor="#919191"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtGetSeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RegisterDeviceUrl"
                android:textColor="#919191"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ValideteDeviceUrl"
                android:textColor="#919191"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtValidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
            
            <TextView
                android:id="@+id/lblEventURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EvntUrl"
                android:textColor="#919191"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtEventURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
            
            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/Theme"
                android:visibility="invisible"/>

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:entries="@array/Themes" 
                android:visibility="invisible">
            </Spinner>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="50dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:onClick="butSave_Click"
                    android:text="@string/Save" 
                    android:background="@drawable/btn_gray"
                	android:textColor="#626262"
                	android:textSize="8pt"
                	android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:onClick="butCancel_Click"
                    android:text="@string/Cancel" 
                    android:background="@drawable/btn_gray"
                	android:textColor="#626262"
                	android:textSize="8pt"
                	android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="-- Protector Cache --"
                android:textColor="#919191"
                android:textSize="10pt" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="50dp"
                android:orientation="horizontal" 
                android:weightSum="2">

                <Button
                    android:id="@+id/btnProtectorClearUpdateCache"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:onClick="butProtectorClearUpdateCache_Click"
                    android:text="Clear Database" 
                    android:background="@drawable/btn_gray"
                	android:textColor="#626262"
                	android:textSize="8pt"
                	android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/btnProtectorClearScanCache"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:onClick="butProtectorClearScanCache_Click"
                    android:text="Clear Scan" 
                    android:background="@drawable/btn_gray"
                	android:textColor="#626262"
                	android:textSize="8pt"
                	android:layout_marginLeft="10dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>